--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -500,6 +500,7 @@ header .wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
@@ -581,6 +582,11 @@ header .wrapper .contact p span {
   display: block;
   cursor: pointer;
   transition: all 0.4s;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  height: 20px;
+  z-index: 10;
 
   .burger {
     @include burger(40px, 8px, 18px, $white);
@@ -598,6 +604,16 @@ header .wrapper .contact p span {
   top: 0;
   z-index: 1000;
   text-align: center;
+  transition: transform 0.3s, opacity 0.3s;
+  transform: scale(0.9);
+  opacity: 0;
+  display: none;
+
+  &.active {
+    transform: none;
+    opacity: 1;
+  }
+
   .wrapper {
     display: flex;
     flex-direction: column;
@@ -633,6 +649,7 @@ header .contact-mobile-link {
   order: 3;
   display: none;
   position: relative;
+
   &:before {
     content: '';
     position: absolute;
@@ -641,6 +658,7 @@ header .contact-mobile-link {
     top: -22px;
     left: -50%;
   }
+
   svg {
     display: block;
   }
@@ -661,11 +679,20 @@ header nav > ul {
   padding: 0;
   position: relative;
   left: -16px;
+  @include down('md') {
+    left: 0;
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 header nav > ul > li {
   display: inline-block;
   margin: 0 41px;
+  @include down('sm') {
+    margin: 0;
+    font-size: 13px;
+  }
 }
 
 header nav > ul > li.active a:after {
@@ -687,6 +714,10 @@ header nav > ul > li .dropdown {
   padding: 0 15px 14px;
   border-bottom: 2px solid #0d4b6f;
   padding-top: 12px;
+  @include down('md') {
+    padding: 10px 0;
+    width: 100%;
+  }
 }
 
 header nav > ul > li .dropdown.open {
@@ -698,6 +729,9 @@ header nav > ul > li .dropdown .wrapper {
   margin: 0 auto;
   overflow: hidden;
   height: auto;
+  @include down('md') {
+    padding: 0;
+  }
 }
 
 header nav > ul > li .dropdown .wrapper:before, header nav > ul > li .dropdown .wrapper:after {
@@ -717,10 +751,23 @@ header nav > ul > li .dropdown ul {
   border-right: 1px solid #1d5f8b;
   padding-left: 30px;
   padding-right: 10px;
+  @include down('xl') {
+    padding-left: 10px;
+  }
+  @include down('lg') {
+    width: 50%;
+    border: none;
+    &:nth-child(odd) {
+      border-right: 1px solid #1d5f8b;
+    }
+  }
 }
 
 header nav > ul > li .dropdown ul:first-child {
   padding-left: 0;
+  @include down('xl') {
+    padding-left: 10px;
+  }
 }
 
 header nav > ul > li .dropdown ul:last-child {
@@ -730,6 +777,11 @@ header nav > ul > li .dropdown ul:last-child {
 header nav > ul > li .dropdown ul li {
   height: 35px;
   margin: 12px 0;
+  @include down('sm') {
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
 
 header nav > ul > li .dropdown a {
@@ -739,15 +791,28 @@ header nav > ul > li .dropdown a {
   height: 35px;
   vertical-align: middle;
   width: 100%;
+  @include down('sm') {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    font-size: 12px;
+  }
 }
 
 header nav > ul > li .dropdown a div, header nav > ul > li .dropdown a span {
   display: table-cell;
+  @include down('sm') {
+    display: block;
+  }
 }
 
 header nav > ul > li .dropdown a div {
   position: relative;
   width: 70px;
+  @include down('sm') {
+    height: 100%;
+    flex: 0 0 40px;
+  }
 }
 
 header nav > ul > li .dropdown a div img:last-child {
@@ -770,12 +835,20 @@ header nav > ul > li .dropdown a img {
   -ms-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   transition: all 0.4s;
+  @include down('sm') {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 header nav > ul > li .dropdown a span {
   height: 100%;
   vertical-align: middle;
   padding-left: 15px;
+  @include down('sm') {
+    height: auto;
+    padding-left: 8px;
+  }
 }
 
 header nav > ul > li .dropdown a:hover {
@@ -813,6 +886,10 @@ header nav > ul > li > a:hover:after {
 
 .features {
   padding: 25px 0;
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .features:before, .features:after {
@@ -832,6 +909,18 @@ header nav > ul > li > a:hover:after {
   margin-right: -0.3em;
   padding: 0 10px;
   float: left;
+  @include down('xl') {
+    margin-right: 0;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  @include down('sm') {
+    width: 100%;
+    margin-bottom: 40px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .features .feature:last-child {
@@ -846,6 +935,9 @@ header nav > ul > li > a:hover:after {
   height: 130px;
   vertical-align: middle;
   margin-bottom: 40px;
+  @include down('xl') {
+    margin-bottom: 20px;
+  }
 }
 
 .features .feature div:before {
@@ -862,11 +954,18 @@ header nav > ul > li > a:hover:after {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  @include down('xl') {
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
 }
 
 .features .feature p {
   margin: 0;
   padding: 0 10px;
+  @include down('xl') {
+    padding: 0;
+  }
 }
 
 footer {
@@ -879,6 +978,16 @@ footer > .wrapper {
   max-width: 1170px;
   margin: 0 auto;
   padding-bottom: 30px;
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  @include down('lg') {
+    padding-bottom: 15px;
+  }
+  @include down('sm') {
+    display: none;
+  }
 }
 
 footer > .wrapper:before, footer > .wrapper:after {
@@ -892,6 +1001,12 @@ footer > .wrapper:after {
 
 footer nav {
   float: left;
+  @include down('lg') {
+    width: 60%;
+  }
+  @include down('md') {
+    width: 65%;
+  }
 }
 
 footer nav:before, footer nav:after {
@@ -911,10 +1026,20 @@ footer nav ul {
   padding-right: 20px;
   max-width: 250px;
   margin-right: 20px;
+  @include down('lg') {
+    padding-right: 10px;
+    margin-right: 0;
+    max-width: none;
+    width: 50%;
+    font-size: 13px;
+  }
 }
 
 footer nav ul:first-child {
   width: 200px;
+  @include down('lg') {
+    width: 50%;
+  }
 }
 
 footer nav ul li {
@@ -957,9 +1082,14 @@ footer .bottom {
 }
 
 footer .bottom .wrapper {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   position: relative;
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+    overflow: hidden;
+  }
 }
 
 footer .bottom .wrapper:before, footer .bottom .wrapper:after {
@@ -973,6 +1103,12 @@ footer .bottom .wrapper:after {
 
 footer .bottom .copyright {
   float: left;
+  @include down('sm') {
+    float: none;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
 }
 
 footer .bottom .counter {
@@ -985,6 +1121,12 @@ footer .bottom .counter {
 footer .bottom .made-by {
   float: right;
   text-align: right;
+  @include down('sm') {
+    float: none;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
 }
 
 footer .bottom .made-by p {
@@ -1000,11 +1142,21 @@ footer .bottom .made-by p {
 .distrib {
   background: url("../img/henkel.jpg") no-repeat center/cover;
   height: 90px;
+  @include down('xl') {
+    background-position: left -400px center;
+  }
+  @include down('md') {
+    display: none;
+  }
 }
 
 .distrib .wrapper {
-  width: 1070px;
+  max-width: 1070px;
   margin: 0 auto;
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .distrib .wrapper h2 {
@@ -1013,6 +1165,11 @@ footer .bottom .made-by p {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  @include down('xl') {
+    width: 400px;
+    font-size: 20px;
+    margin-top: 19px;
+  }
 }
 
 .catalog-main {
@@ -1023,6 +1180,15 @@ footer .bottom .made-by p {
 
 .catalog-main .wrapper {
   margin-right: -30px;
+  @include down('xl') {
+    margin-right: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @include down('sm') {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .catalog-main .wrapper:before, .catalog-main .wrapper:after {
@@ -1048,6 +1214,32 @@ footer .bottom .made-by p {
   margin-top: 15px;
   transition: all 0.4s;
   margin-bottom: 15px;
+  @include down('xl') {
+    margin-left: 15px;
+    margin-right: 15px;
+    flex: 1 0 250px;
+    flex-grow: 1;
+    width: auto;
+    float: none;
+    display: block;
+  }
+  @include down('sm') {
+    flex-basis: 140px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    img {
+      max-width: 70%;
+      height: auto;
+      &:nth-child(1), &:nth-child(2) {
+        max-width: 95%;
+      }
+      &:nth-child(3) {
+        max-width: 65%;
+      }
+    }
+  }
 }
 
 .catalog-main .item:hover {
@@ -1121,6 +1313,24 @@ footer .bottom .made-by p {
   color: #fff;
   border-radius: 5px;
   transition: all 0.3s;
+  @include down('xl') {
+    height: auto;
+    min-height: 40px;
+    line-height: 1.4;
+    font-size: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+}
+
+.company-desc-wrappper {
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 12px;
+  }
 }
 
 .layout {
@@ -1131,6 +1341,10 @@ footer .bottom .made-by p {
 
 .layout .wrapper {
   position: relative;
+  @include down('xl') {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .layout .wrapper:before, .layout .wrapper:after {
@@ -1426,6 +1640,9 @@ footer .bottom .made-by p {
 .about h1 {
   text-align: left;
   font-size: 30px;
+  @include down('md') {
+    font-size: 24px;
+  }
 }
 
 .about p {
@@ -1433,20 +1650,44 @@ footer .bottom .made-by p {
   margin: 0;
   line-height: 1.57;
   text-align: justify;
+  @include down('md') {
+    text-align: left;
+    text-indent: 0;
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @include down('sm') {
+    font-size: 13px;
+  }
 }
 
 .about .certificats {
   float: right;
   margin-left: 30px;
   width: 440px;
+  @include down('md') {
+    width: 100%;
+    margin-left: 0;
+    float: none;
+  }
 }
 
 .about .certificats a {
   display: inline-block;
+  @include down('md') {
+    display: flex;
+    width: 100%;
+  }
 }
 
 .about .certificats a img {
   /*margin: 10px;*/
+  @include down('md') {
+    width: 50% !important;
+    height: auto !important;
+  }
 }
 
 .about .certificats a:nth-child(2n) {
@@ -1454,8 +1695,10 @@ footer .bottom .made-by p {
 }
 
 .about .features {
-  width: 700px;
   text-align: center !important;
+  @include down('md') {
+    margin-top: -60px;
+  }
 }
 
 .about .features p {
@@ -1464,10 +1707,7 @@ footer .bottom .made-by p {
 }
 
 .about .features .feature {
-  margin: 20px 20px;
   text-align: center;
-  width: 270px;
-  float: none;
 }
 
 .contact-page {
@@ -1482,13 +1722,30 @@ footer .bottom .made-by p {
   margin: 10px 0;
 }
 
+.contact-page .contact-page__number {
+  display: inline-block;
+  color: #000;
+  margin-left: 4px;
+  @include down('md') {
+    display: block;
+    margin-left: 0;
+  }
+}
+
 .contact-page span {
   color: #1d5f8b;
 }
 
+
 .map {
   width: 100%;
   height: 400px;
+  @include down('lg') {
+    height: 300px;
+  }
+  @include down('md') {
+    height: 200px;
+  }
 }
 
 .map #map {
