--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -1347,6 +1347,21 @@ footer .bottom .made-by p {
   }
 }
 
+.layout-wrapper-flex {
+  @include down('xl') {
+    display: flex;
+    .layout-left {
+      flex: 0 0 270px;
+      margin-right: 20px;
+    }
+  }
+  @include down('md') {
+    .layout-left {
+      display: none;
+    }
+  }
+}
+
 .layout .wrapper:before, .layout .wrapper:after {
   content: " ";
   display: table;
@@ -1439,6 +1454,9 @@ footer .bottom .made-by p {
 
 .breadcrumbs a {
   display: inline-block;
+  @include down('md') {
+    line-height: 1.5;
+  }
 }
 
 .breadcrumbs a:after {
@@ -1465,6 +1483,14 @@ footer .bottom .made-by p {
 
 .catalog-inner .wrapper {
   margin-right: -30px;
+  @include down('xl') {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @include down('lg') {
+    margin-right: -15px;
+  }
 }
 
 .catalog-inner .item {
@@ -1481,6 +1507,27 @@ footer .bottom .made-by p {
   position: relative;
   overflow: hidden;
   transition: all 0.3s;
+  @include down('xl') {
+    flex: 1 0 230px;
+    padding-bottom: 0;
+    height: auto;
+  }
+  @include down('lg') {
+    margin-right: 15px;
+    margin-bottom: 7.5px;
+    margin-top: 7.5px;
+  }
+}
+
+.catalog-inner .item a {
+  @include down('xl') {
+    display: block;
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+  }
 }
 
 .catalog-inner .item:hover {
@@ -1505,6 +1552,15 @@ footer .bottom .made-by p {
   width: 100%;
   border-radius: 5px;
   border: 1px solid #e7e7e7;
+  @include down('xl') {
+    height: auto;
+    min-height: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 10px;
+  }
 }
 
 .catalog-inner .item p {
@@ -1514,6 +1570,11 @@ footer .bottom .made-by p {
   display: table;
   transition: all 0.4s;
   width: 100%;
+  @include down('xl') {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .catalog-inner .item p span {
@@ -1521,6 +1582,10 @@ footer .bottom .made-by p {
   vertical-align: middle;
   display: table-cell;
   padding: 10px 0;
+  @include down('xl') {
+    display: block;
+    height: auto;
+  }
 }
 
 .catalog-inner .item > .btn {
@@ -1539,6 +1604,9 @@ footer .bottom .made-by p {
   -webkit-transform: translateY(120px);
   -ms-transform: translateY(120px);
   transform: translateY(120px);
+  @include down('xl') {
+    width: calc(100% - 40px);
+  }
 }
 
 .catalog-inner .item > .btn:hover {
@@ -1565,11 +1633,17 @@ footer .bottom .made-by p {
 .full-item h1 {
   margin-top: 0;
   margin-bottom: 14px;
+  @include down('lg') {
+    font-size: 26px;
+  }
 }
 
 .full-item h2 {
   color: #1d5f8b;
   margin-bottom: 6px;
+  @include down('lg') {
+    font-size: 20px;
+  }
 }
 
 .full-item .top {
@@ -1595,6 +1669,22 @@ footer .bottom .made-by p {
   margin-right: 30px;
   text-align: center;
   display: block;
+  @include down('lg') {
+    margin-right: 20px;
+    width: 160px;
+    height: 160px;
+    margin-bottom: 8px;
+    img {
+      max-width: 100%;
+      height: 100%;
+    }
+  }
+  @include down('sm') {
+    margin-right: 0;
+    margin-bottom: 20px;
+    float: none;
+    width: 100%;
+  }
 }
 
 .full-item .top .complect {
